[package]
name = "dailyprogrammerquerier"
version = "0.1.0"
authors = ["Benjamin Hinchliff <benjamin.hinchliff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
webbrowser = "0.5.5"
url = "2.1.1"
tiny_http = "0.7.0"
