[package]
name = "dailyprogrammerquerier"
version = "0.1.0"
authors = ["Benjamin Hinchliff <benjamin.hinchliff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webbrowser = "0.5"
url = "2.1"
tiny_http  = "0.7"
rand = "0.7"
tokio = { version = "0.2", features = ["macros", "fs"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.10", features = ["json"] }
sled = "0.34"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.12"
htmlescape = "0.3.1"
clap = { version = "2.33", features = ["yaml"] }
itertools = "0.9"
regex = "1.3"
futures = "0.3"
